--- a/Report.Rmd
+++ b/Report.Rmd
@@ -6,10 +6,15 @@ output:
 
 ---
 title: "Report2"
-author: "Sander Miesen, Gaelle Verdon, Emma Boehly, Constance de Trogoff"
+author: "Sander Miesen, Gaëlle Verdon, Emma Boehly, Constance de Trogoff"
 date: "`r Sys.Date()`"
 geometry: margin=2.5cm
 output: pdf_document
+header-includes:
+  - \usepackage{fancyhdr}
+  - \pagestyle{fancy}
+  - \fancyhead{}
+  - \fancyhead[C]{Sander Miesen, Gaëlle Verdon, Emma Boehly, Constance de Trogoff}
 ---
 ```{r import, include=FALSE}
  #knitr::opts_chunk$set(fig.width=12, fig.height=8) 
@@ -247,7 +252,7 @@ However before accepting our model, it is essential to verify that model assumpt
 Other diagnostic plots on the presence of influential points were also visualized although not displayed here and no specific outliers were found although point 24 of West Midland appeared to be the most influential one.
 
 
-```{r diagnostics, echo=FALSE, fig.height = 4, fig.width = 6, fig.align = "center"}
+```{r diagnostics, echo=FALSE, fig.height = 3.5, fig.width = 5.5, fig.align = "center"}
 # Define model
 model2 <- lm(formula = criminals_per_100k ~ ale_beer_houses_per_100k + attendants_public_school_per_10k, data =data)
 
